<resources>
    <string name="app_name" translatable="false">Custom Slider</string>
    <string name="plugin_name">Custom Slider</string>
    <string name="taskerplugin">Just hit the back button and start using the event.</string>
    <string name="menu_discard_changes">Discard changes</string>
    <string name="taskerpluginbootup">Receive event after phone start</string>
    <string name="title_activity_settings" translatable="false">Settings</string>
    <string name="pref_header_advanced">Advanced</string>
    <string name="pref_header_notslider">Notification Slider</string>
    <string name="pref_title_hide_toasts">Hide Notification Toasts</string>
    <string name="pref_summary_hide_toasts">Hide the notification toasts that appear, when switching the sliders position.</string>
    <string name="pref_title_show_icon">Hide App Icon in Launcher</string>
    <string name="pref_summary_show_icon">Hides the app icon in the launcher. You need to restart your phone/launcher to activate the change. The app is still accessible from Xposed.</string>
    <string name="pref_title_vibrateInsteadPriority">Vibrate instead of Priority</string>
    <string name="pref_summary_vibrateInsteadPriority">Replaces the priority mode with a vibrate mode.</string>
    <string name="pref_title_silentMedia_inVibrate">Silence Media Volume</string>
    <string name="pref_summary_silentMedia_inVibrate">Sets the media volume to 0 when in vibrate mode.</string>
    <string name="startappstring">Start Application</string>
    <string name="pref_title_topPosition">Top Slider Position</string>
    <string name="noAction">No Action</string>
    <string-array name="pref_sliderposition_list_titles">
        <item>All Notifications</item>
        <item>Priority/Vibrate</item>
        <item>Alarms Only</item>
        <item>Total Silence</item>
        <item>Airplane mode</item>
        <item>Audio Volume</item>
        <item>Automatic Battery Saver</item>
        <item>Battery Saver</item>
        <item>Bluetooth</item>
        <item>Charging LED</item>
        <item>Flashlight</item>
        <item>GPS</item>
        <item>Mobile Data</item>
        <item>Notification LED</item>
        <item>Notifications on lock screen</item>
        <item>Preferred Network</item>
        <item>Screen Orientation</item>
        <item>Screen Brightness</item>
        <item>Show Custom Toast</item>
        <item>@string/startappstring</item>
        <item>Wifi</item>
    </string-array>
    <string-array name="pref_sliderposition_list_values">
        <item>ALL_NOTIFICATIONS</item>
        <item>PRIORITY</item>
        <item>ALARMS_ONLY</item>
        <item>TOTAL_SILENCE</item>
        <item>AIRPLANE</item>
        <item>@string/AUDIO_VOLUME</item>
        <item>@string/BATTERY_SAVING_AUTOMATIC</item>
        <item>@string/BATTERY_SAVING</item>
        <item>BLUETOOTH</item>
        <item>@string/CHARGING_LED</item>
        <item>FLASHLIGHT</item>
        <item>GPS</item>
        <item>MOBILE_DATA</item>
        <item>@string/NOTIFICATION_LED</item>
        <item>@string/LOCK_SCREEN_NOTIFICATION</item>
        <item>PREFER_NETWORK</item>
        <item>SCREEN_ORIENTATION</item>
        <item>SCREEN_BRIGHTNESS</item>
        <item>TOAST</item>
        <item>STARTAPP</item>
        <item>WIFI</item>
    </string-array>
    <string name="pref_title_midPosition">Middle Slider Position</string>
    <string name="pref_title_botPosition">Bottom Slider Position</string>
    <string-array name="noConfigurationNeeded_values">
        <item>ALL_NOTIFICATIONS</item>
        <item>PRIORITY</item>
        <item>ALARMS_ONLY</item>
        <item>TOTAL_SILENCE</item>
    </string-array>
    <string-array name="simpleCombo_values">
        <item>AIRPLANE</item>
        <item>BLUETOOTH</item>
        <item>FLASHLIGHT</item>
        <item>GPS</item>
        <item>MOBILE_DATA</item>
        <item>PREFER_NETWORK</item>
        <item>SCREEN_ORIENTATION</item>
        <item>STARTAPP</item>
        <item>WIFI</item>
        <item>@string/BATTERY_SAVING</item>
        <item>@string/BATTERY_SAVING_AUTOMATIC</item>
        <item>@string/LOCK_SCREEN_NOTIFICATION</item>
        <item>@string/NOTIFICATION_LED</item>
        <item>@string/CHARGING_LED</item>
    </string-array>
    <string-array name="startapp_array">
        <item>STARTAPP</item>
    </string-array>
    <string-array name="onOff_titles">
        <item>ON</item>
        <item>OFF</item>
    </string-array>
    <string-array name="onOff_values">
        <item>ON</item>
        <item>OFF</item>
    </string-array>
    <string-array name="gps_titles">
        <item>High Accuracy</item>
        <item>Device Only</item>
        <item>Battery Saving</item>
        <item>OFF</item>
    </string-array>
    <string-array name="gps_values">
        <item>HIGH_ACCURACY</item>
        <item>DEVICE_ONLY</item>
        <item>BATTERY_SAVING</item>
        <item>GPS_OFF</item>
    </string-array>
    <string-array name="network_titles">
        <item>2G</item>
        <item>3G</item>
        <item>4G</item>
    </string-array>
    <string-array name="network_values">
        <item>2G</item>
        <item>3G</item>
        <item>4G</item>
    </string-array>
    <string-array name="orientation_titles">
        <item>Auto</item>
        <item>Portrait</item>
    </string-array>
    <string-array name="orientation_values">
        <item>AUTO</item>
        <item>PORTRAIT</item>
    </string-array>
    <string-array name="screen_brightness_titles">
        <item>Auto</item>
        <item>Level</item>
    </string-array>
    <string-array name="screen_brightness_values">
        <item>AUTO</item>
        <item>LEVEL</item>
    </string-array>
    <string-array name="notification_led_titles">
        <item>Allow LED to glow</item>
        <item>Block LED from glowing</item>
    </string-array>
    <string-array name="notification_led_values">
        <item>@string/ALLOW_LED</item>
        <item>@string/DENY_LED</item>
    </string-array>
    <string name="screen_brightness_level">LEVEL</string>
    <string-array name="lock_screen_notification_titles">
        <item>Show complete notifications</item>
        <item>Show notifications but hide sensitive content</item>
        <item>Don\'t show notifications</item>
    </string-array>
    <string-array name="lock_screen_notification_values">
        <item>@string/SHOW_ALL_NOTIFICATIONS</item>
        <item>@string/SHOW_ALL_BUT_PRIVATE_NOTIFICATIONS</item>
        <item>@string/DONT_SHOW_NOTIFICATIONS</item>
    </string-array>
    <string-array name="battery_saver_automatic_titles">
        <item>Never</item>
        <item>At 5% battery</item>
        <item>At 15% battery</item>
    </string-array>
    <string-array name="battery_saver_automatic_values">
        <item>@string/BATTERY_SAVING_NEVER</item>
        <item>@string/BATTERY_SAVING_5</item>
        <item>@string/BATTERY_SAVING_15</item>
    </string-array>
    <string name="BATTERY_SAVING_NEVER">BATTERY_SAVING_NEVER</string>
    <string name="BATTERY_SAVING_5">BATTERY_SAVING_5</string>
    <string name="BATTERY_SAVING_15">BATTERY_SAVING_15</string>
    <string-array name="volume_titles">
        <item>Notification volume</item>
        <item>Ringer Volume</item>
        <item>Music Volume</item>
        <item>Alarm Volume</item>
    </string-array>
    <string-array name="volume_values">
        <item>@string/volume_notification</item>
        <item>@string/volume_ring</item>
        <item>@string/volume_music</item>
        <item>@string/volume_alarm</item>
    </string-array>
    <string name="volume_notification">STREAM_NOTIFICATION</string>
    <string name="volume_ring">STREAM_RING</string>
    <string name="volume_music">STREAM_MUSIC</string>
    <string name="volume_alarm">STREAM_ALARM</string>
    <string name="GPS">GPS</string>
    <string name="PREFER_NETWORK">PREFER_NETWORK</string>
    <string name="SCREEN_ORIENTATION">SCREEN_ORIENTATION</string>
    <string name="SCREEN_BRIGHTNESS">SCREEN_BRIGHTNESS</string>
    <string name="AUDIO_VOLUME">AUDIO_VOLUME</string>
    <string name="STARTAPP">STARTAPP</string>
    <string name="BATTERY_SAVING">BATTERY_SAVING</string>
    <string name="BATTERY_SAVING_AUTOMATIC">BATTERY_SAVING_AUTOMATIC</string>
    <string name="AlertDialogMessage">If you reverse the alert slider positions, there is a graphical issue in the volume control after rebooting the phone.
    When you boot up the phone with the slider on the top position, it will be shown like it is "Silent". In real, it is on "All Notifications", and everything will work.
    You can even adjust the volume with the hardware buttons. The same applies if you boot the phone up with the bottom position. It will be shown as "All Notifications" but it is silent
    and you will not be able to adjust the volume.</string>
    <string name="AlertDialogTitle">Warning!</string>
    <string name="AlertDialogMessageDataDeleted">All position-specific data was deleted as written in the changelog. This was needed, because of a huge refactoring in order
    to support actions with parameters (like brightness level). Sorry for that!</string>
    <string name="AlertDialogMessage_VibrateMode">In order to let the Vibrate Mode work correctly, the priority settings need to be adjusted. You can find them
    under your phones settings -> alert slider -> priority mode. Set Calls/Messages to From Anyone. When you want that the phone also vibrates
    when there is a Whatsapp Message e.g. you need to set its notifications to priority. Just open the App info of the specific app and set Notifications
    to Treat As Priority.</string>
    <string name="Ok">OK</string>
    <string name="GoToPrioritySettings">Go To Priority Settings</string>
    <string-array name="pref_language_list_values">
        <item>system</item>
        <item>en</item>
        <item>de</item>
        <item>hr</item>
        <item>pl</item>
        <item>ru</item>
        <item>zh</item>
    </string-array>
    <string-array name="pref_language_list_titles">
        <item>System language</item>
        <item>English</item>
        <item>Deutsch</item>
        <item>Hrvatski</item>
        <item>Polski</item>
        <item>Pусский</item>
        <item>中文字</item>
    </string-array>
    <string name="pref_title_language">Language</string>
    <string name="pref_donate_title">Donate via Paypal</string>
    <string name="pref_extendedVolumeControl">Extended Volume Control</string>
    <string name="pref_extendedVolumeControl_summary">Extends the Volume Control (pressing volume up/down hardware keys), in order to let the user switch between the audio modes of the slider. (Silent-Priority-All)</string>
    <string name="vibrateModeDefaultText">Vibration</string>
    <string name="pref_title_vibrateModeText">Vibrate Mode Text</string>
    <string name="customSlider_screen">Customize the slider</string>
    <string name="notificationSlider_screen">Improve notification slider</string>
    <string name="pref_category_main_header">Main</string>
    <string name="extendedVolumeControlSilentText">SILENT</string>
    <string name="pref_title_extendedVolumeControlSilentText">Extended Volume Control Silent Text</string>
    <string name="extendedVolumeControlPriorityText">PRIORITY</string>
    <string name="pref_title_extendedVolumeControlPriorityText">Extended Volume Control Priority Text</string>
    <string name="extendedVolumeControlAllNotText">ALL</string>
    <string name="pref_title_extendedVolumeControlAllNotText">Extended Volume Control All Text</string>
    <string-array name="pref_list_values_usedOS">
        <item>oxygen</item>
        <item>cyanogen</item>
    </string-array>
    <string-array name="pref_list_titles_usedOS">
        <item>Oxygen OS</item>
        <item>CyanogenMod based</item>
    </string-array>
    <string name="pref_title_usedOS">Operating System</string>
</resources>